update second section

--- a/template01-v01.html
+++ b/template01-v01.html
@@ -262,11 +262,6 @@
                           </div>
                         </td>
                       </tr>
-                      <!-- Begin spacer -->
-                      <tr>
-                        <td height="10">&nbsp;</td>
-                      </tr>
-                      <!-- End spacer -->
                     </table>
                   </td>
                 </tr>
@@ -397,17 +392,18 @@
             </td>
           </tr>
           <!-- End full width image -->
+
           <!-- Begin full width text -->
           <tr>
             <td align="center">
-              <table align="center" class="container-main" bgcolor="#ffffff" cellpadding="0" cellspacing="0" width="600">
+              <table align="center" class="container-main" bgcolor="#ffffff" cellpadding="0" cellspacing="0">
                 <tr>
                   <td>
-                    <table align="center" width="600px" class="full-width-text">
+                    <table align="center" width="600" class="full-width-text">
                       <tr>
                         <td>
                           <div style="text-align: center; font-size: 16px; line-height: 22px; padding: 15px;">
-                            <p>Want more Mod Mode? Connect with us on Instagram for fashion inspiration. You can even shop Mod Mode right from <a href="https://www.instagram.com/shopmodmode/" target="_blank" style="color: #af64a9">Instagram</a> in our <a href="http://modmodeboutique.com/pages/instashop" target="_blank" style="color: #af64a9">INSTASHOP</a>.</p>
+                            <p>See how insta pros style our scarves. From polished layers to unconventional cuts, you’ll find inspiration for your next outfit. Shop our instagram here.</p>
                           </div>
                         </td>
                       </tr>
@@ -418,19 +414,87 @@
             </td>
           </tr>
           <!-- End full width text -->
+
           <!-- Begin full width image -->
           <tr>
             <td align="center">
               <table align="center" class="container-main" bgcolor="#ffffff" cellpadding="0" cellspacing="0">
                 <tr>
                   <td class="full-width-img">
-                    <a href="http://modmodeboutique.com/pages/instashop" target="_blank"><img src="https://gallery.mailchimp.com/4a1842bd0adebab3927494596/images/4c7815f1-ce98-4f0e-8ee1-8dabb6e10aff.jpg" height="299" width="600" alt="Shop our Instagram"></a>
+                    <a href="http://modmodeboutique.com/pages/instashop" target="_blank"><img src="instashop01.jpg" width="600" alt="Shop our Instagram"></a>
                   </td>
                 </tr>
               </table>
             </td>
           </tr>
           <!-- End full width image -->
+
+          <!-- Begin spacer -->
+          <tr>
+            <td height="10">&nbsp;</td>
+          </tr>
+          <!-- End spacer -->
+
+          <!-- Begin button -->
+          <tr>
+            <td>
+              <table width="200" align="center">
+                <tr>
+                  <td bgcolor="#ae64a9" style="background-color: #ae64a9; color: #ffffff; padding: 10px 0; text-align: center;">
+                    <a href="http://modmodeboutique.com/products/hamsa-evil-eye-wristlet" target="_blank" style="color: #ffffff; text-decoration: none;">GET THE LOOK</a>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- End button -->
+
+          <!-- Begin spacer -->
+          <tr>
+            <td height="10">&nbsp;</td>
+          </tr>
+          <!-- End spacer -->
+
+          <!-- Begin full width image -->
+          <tr>
+            <td align="center">
+              <table align="center" class="container-main" bgcolor="#ffffff" cellpadding="0" cellspacing="0">
+                <tr>
+                  <td class="full-width-img">
+                    <a href="http://modmodeboutique.com/pages/instashop" target="_blank"><img src="instashop02.jpg" width="600" alt="Shop our Instagram"></a>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- End full width image -->
+
+          <!-- Begin spacer -->
+          <tr>
+            <td height="10">&nbsp;</td>
+          </tr>
+          <!-- End spacer -->
+
+          <!-- Begin button -->
+          <tr>
+            <td>
+              <table width="200" align="center">
+                <tr>
+                  <td bgcolor="#ae64a9" style="background-color: #ae64a9; color: #ffffff; padding: 10px 0; text-align: center;">
+                    <a href="http://modmodeboutique.com/products/hamsa-evil-eye-wristlet" target="_blank" style="color: #ffffff; text-decoration: none;">GET THE LOOK</a>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- End button -->
+
+          <!-- Begin spacer -->
+          <tr>
+            <td height="10">&nbsp;</td>
+          </tr>
+          <!-- End spacer -->
+
           <!-- Begin footer -->
           <tr>
             <td align="center">
