--- a/template01-v01.html
+++ b/template01-v01.html
@@ -495,6 +495,28 @@
           </tr>
           <!-- End spacer -->
 
+          <!-- Begin full width text -->
+          <tr>
+            <td align="center">
+              <table align="center" class="container-main" bgcolor="#ffffff" cellpadding="0" cellspacing="0">
+                <tr>
+                  <td>
+                    <table align="center" width="600" class="full-width-text">
+                      <tr>
+                        <td>
+                          <div style="text-align: center; font-size: 16px; line-height: 22px; padding: 15px;">
+                            <p>Want more Mod Mode? Connect with us on facebook, twitter, or instagram.</p>
+                          </div>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- End full width text -->
+
           <!-- Begin footer -->
           <tr>
             <td align="center">
